@@ -164,14 +164,10 @@ sub new_from_data
 {
 	my( $class, $session, $known ) = @_;
 
-	my $self = {};
-	
-	$self->{data} = $known;
-	$self->{dataset} = $session->get_repository->get_dataset( "access" ); 
-	$self->{session} = $session;
-	bless $self, $class;
-
-	return( $self );
+	return $class->SUPER::new_from_data(
+			$session,
+			$known,
+			$session->get_repository->get_dataset( "access" ) );
 }
 
 ######################################################################
