@@ -238,15 +238,12 @@ Construct a new EPrints::DataObj::Document based on the ref to a hash of metadat
 
 sub new_from_data
 {
-	my( $class, $session, $data ) = @_;
+	my( $class, $session, $known ) = @_;
 
-	my $self = {};
-	bless $self, $class;
-	$self->{data} = $data;
-	$self->{dataset} = $session->get_repository->get_dataset( "document" ),
-	$self->{session} = $session;
-
-	return( $self );
+	return $class->SUPER::new_from_data(
+			$session,
+			$known,
+			$session->get_repository->get_dataset( "document" ) );
 }
 
 
