@@ -184,17 +184,14 @@ from the database into objects.
 
 sub new_from_data
 {
-	my( $class, $session, $data ) = @_;
+	my( $class, $session, $known ) = @_;
 
-	my $self = {};
-	
-	$self->{data} = $data;
-	$self->{dataset} = $session->get_repository->get_dataset( "history" ); 
-	$self->{session} = $session;
-	bless $self, $class;
-
-	return( $self );
+	return $class->SUPER::new_from_data(
+			$session,
+			$known,
+			$session->get_repository->get_dataset( "history" ) );
 }
+
 
 
 
