@@ -238,16 +238,14 @@ Used to create an object from the data retrieved from the database.
 
 sub new_from_data
 {
-	my( $class, $session, $data ) = @_;
+	my( $class, $session, $known ) = @_;
 
-	my $self = {};
-	bless $self, $class;
-	$self->{data} = $data;
-	$self->{dataset} = $session->get_repository->get_dataset( "user" );
-	$self->{session} = $session;
-
-	return( $self );
+	return $class->SUPER::new_from_data(
+			$session,
+			$known,
+			$session->get_repository->get_dataset( "user" ) );
 }
+
 
 
 ######################################################################
