@@ -570,11 +570,8 @@ sub _f
 
 sub to_xml_basic
 {
-	my( $self, $session, $value, $depth ) = @_;
+	my( $self, $session, $value ) = @_;
 
-	$depth = 0 unless defined $depth;
-
-	my $ind = "  "x$depth;
 	my $r = $session->make_doc_fragment;	
 
 	foreach my $part ( qw/ family given honourific lineage / )
@@ -582,7 +579,6 @@ sub to_xml_basic
 		my $nv = $value->{$part};
 		next unless defined $nv;
 		next unless $nv ne "";
-		$r->appendChild( $session->make_text( "\n  $ind" ) );
 		my $tag = $session->make_element( $part );
 		$tag->appendChild( $session->make_text( $nv ) );
 		$r->appendChild( $tag );
